<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="media_library">Медиатека</string>

    <string name="theme_switch">Темная тема</string>

    <string name="share_app">Поделиться приложением</string>

    <string name="agreement_users">Пользовательское соглашение</string>

    <string name="support">Написать в поддержку</string>
    <string name="chat_to_support_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="chat_to_support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="link_practicum_developer">https://practicum.yandex.ru/android-developer/</string>
    <string name="stores_steamcommunity_Mail_ru">stores.steamcommunity@mail.ru</string>
    <string name="clear_input_text">Очистить</string>
    <string name="email">Email:</string>
    <string name="Theme">Theme:</string>
    <string name="Description">Description:</string>
    <string name="Submit">Submit</string>
    <string name="Choose">Выбор приложения для отправки</string>
    <string name="oferta">https://yandex.ru/legal/practicum_offer/</string>
    <string name="for_tracks">%s • %s</string>
    <string name="button_update">Обновить</string>
    <string name="troubles_with_network">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="no_find">Ничего не нашлось</string>
    <string name="search_btn_clear_history">Очистить историю</string>
    <string name="youre_searched">Вы искали</string>
    <string name="your_history">История поиска</string>
    <string name="duration">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="playlist_icon">Playlist icon</string>
    <string name="play">Play track icon</string>
    <string name="favorite_list_icon">Favorite list icon</string>
</resources>