<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorSecondary"
    >

    <ImageButton
       android:fillColor="?attr/colorPrimaryVariant"
        android:id="@+id/back_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_back_to_main"
        android:backgroundTint="?attr/colorSecondary"
        android:paddingTop="22dp"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/setting_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="48dp"
        android:paddingTop="14dp"
        android:paddingBottom="40dp"
        android:text="@string/settings"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="80dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Switch
            android:fontFamily="@font/ys_display_medium"
            style="@style/ButtonStyleSetting"
            android:id="@+id/switch_to_dark"
            android:text="@string/theme_switch" />

        <Button
            style="@style/ButtonStyleSetting"
            android:id="@+id/share_app"
            android:text="@string/share_app"
            app:icon="@drawable/ic_share" />

        <Button
            style="@style/ButtonStyleSetting"
            android:id="@+id/chat_to_support"
            android:text="@string/support"
            app:icon="@drawable/ic_support" />

        <Button
            style="@style/ButtonStyleSetting"
            android:id="@+id/agreement_users"
            android:text="@string/agreement_users"
            app:icon="@drawable/ic_agreement_users"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>