<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/colorOnPrimary">

        <TextView
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_title"
            android:layout_marginTop="14dp"
            android:layout_marginRight="210dp"
            android:layout_marginBottom="40dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/text_size">

        </TextView>

        <Button
            style="@style/ButtonStyleMain"
            android:id="@+id/search"
            android:text="@string/search"
            app:icon="@drawable/ic_search"
            app:iconTint="@color/black" />

        <Button
            style="@style/ButtonStyleMain"
            android:id="@+id/mediaLibrary"
            android:text="@string/media_library"
            app:icon="@drawable/ic_medialibrary" />

        <Button
            style="@style/ButtonStyleMain"
            android:id="@+id/setting"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>